<resources>
    <string name="app_name">校园明人堂</string>
    <string name="app_name_letter">baseproject</string>

    <string name="bottom_1">首页</string>
    <string name="bottom_2">消息</string>
    <string name="bottom_3">我的</string>


    <string name="loadding">  加载中...</string>
    <string name="snackbar_action">关闭</string>
    <string name="autoloadding_zhunbei">  准备加载</string>
    <string name="autoloadding_no_data">没有数据可以加载</string>
    <string name="autoloadding_comple_data">共为您加载 %1$d 条数据</string>
    <string name="autoloadding_failure">加载失败</string>


    <!--****************************登录注册********************************-->

    <string name="inputPhone">请输入手机号</string>
    <string name="inputPassword">请输入密码</string>
    <string name="inputPasswordAffitm">请确认密码</string>
    <string name="inputCheckHint">两次密码不一致</string>
    <string name="get_yanzenma">获取验证码</string>
    <string name="login">立即登录</string>
    <string name="register">立即注册</string>


    <string name="permission_rationale">为了提供更好的服务,名人堂需要读写数据权限</string>
    <string name="no_add_team">尚未加入团队</string>


</resources>
