<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="presenter"
            type="com.ashlikun.baseproject.presenter.login.RegisterPresenter"></variable>


    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">


        <com.ashlikun.supertoobar.SupperToolBar xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/toolbar"
            style="@style/Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                app:tabGravity="center"
                app:tabIndicatorColor="@color/white"
                app:tabSelectedTextColor="@color/white"
                app:tabTextColor="@color/gray_dd"></android.support.design.widget.TabLayout>
        </com.ashlikun.supertoobar.SupperToolBar>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/phoneTil"
            style="@style/TextInputLayout.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_20"
            app:counterEnabled="false"
            app:counterMaxLength="11">

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:hint="@string/inputPhone"
                android:inputType="number"
                android:paddingLeft="@dimen/dp_5"
                android:text="@={presenter.phone}"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/edittext_cursor_main_color"
                android:textSize="@dimen/dp_14" />

        </android.support.design.widget.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10_f">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/codeTil"
                style="@style/TextInputLayout.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:counterEnabled="false"
                app:counterMaxLength="6">

                <EditText
                    android:id="@+id/codeEt"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    android:layout_gravity="center_vertical"
                    android:hint="验证码"
                    android:inputType="number"
                    android:maxLength="6"
                    android:paddingLeft="@dimen/dp_5"
                    android:text="@={presenter.code}"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/edittext_cursor_main_color"
                    android:textSize="@dimen/dp_14" />
            </android.support.design.widget.TextInputLayout>

            <com.ashlikun.flatbutton.FlatButton
                android:id="@+id/sendButton"
                style="@style/FlatButton.EntityPrimary"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_40"
                android:layout_gravity="right"
                android:onClick="onSendCodeClick"
                android:text="@string/get_yanzenma"
                app:cornerRadius="0dp"></com.ashlikun.flatbutton.FlatButton>

        </FrameLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordTil"
            style="@style/TextInputLayout.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10_f"
            app:counterEnabled="false"
            app:counterMaxLength="20">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:hint="@string/inputPassword"
                android:inputType="text"
                android:paddingLeft="@dimen/dp_5"
                android:text="@={presenter.password}"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@drawable/edittext_cursor_main_color"
                android:textSize="@dimen/dp_14" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordTil2"
            style="@style/TextInputLayout.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10_f"
            app:counterEnabled="false"
            app:counterMaxLength="20">

            <EditText
                android:id="@+id/password2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:hint="@string/inputPasswordAffitm"
                android:inputType="text"
                android:paddingLeft="@dimen/dp_5"
                android:text="@={presenter.password2}"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@drawable/edittext_cursor_main_color"
                android:textSize="@dimen/dp_14" />

        </android.support.design.widget.TextInputLayout>


        <com.ashlikun.flatbutton.FlatButton xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/amend"
            style="@style/FlatButton.EntityPrimary"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:gravity="center"
            android:onClick="@{presenter.onClickView}"
            android:padding="@dimen/dp_10"
            android:text="@string/register" />

    </LinearLayout>
</layout>
