<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="presenter"
            type="com.ashlikun.baseproject.presenter.login.LoginPresenter"></variable>

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">


        <com.ashlikun.supertoobar.SupperToolBar xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/toolbar"
            style="@style/Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></com.ashlikun.supertoobar.SupperToolBar>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/phoneTil"
            style="@style/TextInputLayout.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_20"
            app:counterEnabled="true"
            app:counterMaxLength="11">

            <EditText
                android:id="@+id/phone2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:hint="@string/inputPhone"
                android:inputType="number"
                android:paddingLeft="@dimen/dp_5"
                android:text="@={presenter.phone}"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/edittext_cursor_main_color"
                android:textSize="@dimen/dp_14" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordTil"
            style="@style/TextInputLayout.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            app:counterEnabled="true"
            app:counterMaxLength="20">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:hint="@string/inputPassword"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/dp_5"
                android:text="@={presenter.password}"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@drawable/edittext_cursor_main_color"
                android:textSize="@dimen/dp_14" />

        </android.support.design.widget.TextInputLayout>

        <com.ashlikun.flatbutton.FlatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onWangjiClick"
            android:layout_gravity="right"
            android:padding="@dimen/dp_10"
            android:text="忘记密码?"
            android:textSize="@dimen/dp_14"></com.ashlikun.flatbutton.FlatButton>

        <com.ashlikun.flatbutton.FlatButton
            android:id="@+id/user_login_row"
            style="@style/FlatButton.EntityPrimary"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_25"
            android:onClick="@{presenter.onLoginClick}"
            android:text="@string/login" />
    </LinearLayout>
</layout>
